Almost finish project

--- a/style.css
+++ b/style.css
@@ -8,6 +8,12 @@ html {
   background: black;
 }
 
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 main {
   margin: 50% 0%;
   padding: 1rem;
@@ -114,27 +120,18 @@ main {
   color: hsl(213, 19%, 18%);
 }
 
-@media screen and (min-width: 400px) {
-  html {
-    width: 100vw;
-    height: 100vh;
-  }
-
+@media (min-width: 400px) {
   body {
-    margin: 25% 0;
+    margin: 0;
+    height: 100vh;
+    width: 100vw;
+    justify-content: center;
+    align-items: center;
   }
 
   main,
   .rating-finalized {
     min-width: 375px;
     max-width: 400px;
-    margin: auto;
-  }
-
-}
-
-@media screen and (min-width: 820px) {
-  body {
-    margin: 15% 0;
   }
 }
